# mms_analysis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_COMPLETE.md  COMPREHENSIVE_VALIDATION_SUMMARY.md  DATA_MANAGEMENT.md  GUIDE.md  LICENSE  MAGNETOPAUSE_TEST_SUMMARY.md  MEC_EPHEMERIS_INTEGRATION_SUMMARY.md  MEC_INTEGRATION_STATUS_SUMMARY.md  MMS_2019_01_27_FINAL_RESULTS.md  MMS_Comprehensive_Analysis_Report_20190127_123050.md  MMS_SPACECRAFT_ORDERING_ANALYSIS_FIX.md  MMS_SPECTROGRAMS_IMPLEMENTATION_SUMMARY.md  Makefile  PLASMA_SPECTROGRAM_SUMMARY.md  PROJECT_OPTIMIZATION_COMPLETE.md  README.md  REPOSITORY_STATUS.md  VALIDATION_REPORT.md  VALIDATION_RESULTS.md  analyze_mms_formation_with_velocity.py  boundary_consolidated.csv  boundary_crossings.csv  boundary_delays_vn.csv  boundary_summary.json  cleanup_and_validate.py  comprehensive_2019_01_27_analysis.py  comprehensive_event_visualizations.py  comprehensive_mms_event_analysis.py  comprehensive_visualizations_with_mec.py  coords_HEAD_tmp.py  corrected_2019_01_27_analysis.py  corrected_formation_analysis.py  corrected_string_formation_analysis.py  create_comprehensive_mms_visualizations_2019_01_27.py  create_corrected_formation_spectrograms.py  create_corrected_lmn_spectrograms.py  create_fixed_plasma_spectrograms.py  (+104 more)
Archive/: README.md
docs/: DETAILED_OVERVIEW_MMS_MP.md  README.md  citation.bib  comparison_mms_mp_vs_pyspedas_idl.md  formation-metrics.md  installation.md  physics-units-and-conventions.md  project_task_plan.md  quickstart.md  spectrograms.md  troubleshooting.md  utc-and-diagnostics.md  variable-reference-mms-mp.md
examples/: 01_basic_usage.ipynb  2019_01_27_1200_visualization.py  README.md  algorithmic_lmn_param_sweep_20190127.py  analyze_20190127_dn_shear.py  compare_sav_vs_mms_mp.py  diagnostic_lmn_alignment_20190127.py  diagnostic_sav_vs_mmsmp_20190127.py  example_script.py  make_3d_animation_20190127.py  make_3d_animation_20190127_observed_boundary.py  make_boundary_BLMN_20190127.py  make_boundary_storyboards_20190127.py  make_event_figures_20190127.py  make_event_figures_20190127_pack.py  make_orbits_20190127_algorithmic.py  make_overview_20190127_algorithmic.py  make_spectrograms_20190127_algorithmic.py  make_storyboards_20190127.py  overlay_published_template.json
mms_mp/: __init__.py  __main__.py  boundary.py  cli.py  coords.py  data_loader.py  electric.py  ephemeris.py  formation_detection.py  motion.py  multispacecraft.py  quality.py  resample.py  spectra.py  thickness.py  visualize.py
results_corrected/: TIMEZONE_FIX_SUMMARY.md
results_final/: COMPLETE_RESOLUTION_SUMMARY.md  PLASMA_SPECTROGRAPH_SUCCESS_REPORT.md
tests/: README.md  __init__.py  conftest.py  test_20190127_event_analysis.py  test_algorithmic_lmn.py  test_boundary_detection.py  test_comprehensive_physics.py  test_comprehensive_validation.py  test_data_loader_metadata.py  test_documentation_quality.py  test_electric_blending.py  test_electric_physics_validation.py  test_exb_fix.py  test_exb_physics_check.py  (+16 more)
(+101 files in other folders)
