[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mms-mp"
version = "1.0.0"
description = "MMS Magnetopause Analysis Toolkit - Python toolkit for magnetopause boundary analysis using NASA MMS data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MMS-MP Development Team", email = "contact@example.com"}
]
maintainers = [
    {name = "MMS-MP Development Team", email = "contact@example.com"}
]
keywords = [
    "magnetopause", 
    "MMS", 
    "space physics", 
    "plasma physics", 
    "boundary analysis",
    "magnetosphere"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy"
]
requires-python = ">=3.8"
dependencies = [
    "pyspedas>=1.7.20",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-timeout>=2.1.0",
    "black",
    "flake8",
    "mypy",
    "tqdm"
]
notebooks = [
    "jupyter",
    "ipykernel"
]
progress = [
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/your-org/mms-magnetopause"
Documentation = "https://github.com/your-org/mms-magnetopause/tree/main/docs"
Repository = "https://github.com/your-org/mms-magnetopause"
"Bug Tracker" = "https://github.com/your-org/mms-magnetopause/issues"

[project.scripts]
mms-mp = "mms_mp.cli:main"

[tool.setuptools.packages.find]
include = ["mms_mp*"]

[tool.setuptools.package-data]
mms_mp = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose --timeout=180 --timeout-method=thread"
markers = [
    "timeout(value): override pytest-timeout default for long-running integration tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
